[package]
name = "solana_deposit_withdraw"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.4"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-sdk = "1.18.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]